# VuturaProto

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod
Capnp/: gps_service.capnp  tags_service.capnp
cmake/: UpdateSubmodules.cmake
protobuf/: gps-data.proto  lora-obstacles.proto  lora_obstacles_pb2.py  sensor_pb2.py
protobuf/cpp/: gps-data.grpc.pb.cc  gps-data.grpc.pb.h  gps-data.pb.cc  gps-data.pb.h  lora-obstacles.grpc.pb.cc  lora-obstacles.grpc.pb.h  lora-obstacles.pb.cc  lora-obstacles.pb.h
protobuf/cpp/gps/: gps-data.grpc.pb.cc  gps-data.grpc.pb.h  gps-data.pb.cc  gps-data.pb.h
protobuf/cpp/obstacles/: lora-obstacles.grpc.pb.cc  lora-obstacles.grpc.pb.h  lora-obstacles.pb.cc  lora-obstacles.pb.h
protobuf/go/vutura/: gps-data.pb.go  lora-obstacles.pb.go
protobuf/go/vutura/gps/: gps-data.pb.go
protobuf/go/vutura/obstacles/: lora-obstacles.pb.go
protobuf/gps/: gps-data.proto
protobuf/obstacles/: lora-obstacles.proto
protobuf/python/: gps_data_pb2.py  gps_data_pb2_grpc.py  lora_obstacles_pb2.py  lora_obstacles_pb2_grpc.py
source/: CMakeLists.txt
source/protobuf/gps-data/: CMakeLists.txt
source/protobuf/lora-obstacles/: CMakeLists.txt  lora-obstacles.proto
test/: CMakeLists.txt  test.cpp
